# water_test_scanner

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
ios/: water_test_scanner.podspec
ios/Classes/: native_water_test_scanning.cpp  native_water_test_scanning.hpp  water_test_scanner.cpp  water_test_scanner.hpp
lib/: water_test_scanning.dart
